tests/NormalTests/paczka2/big_fuzzy/20477690.err
Error in line 1: DackTi S28 18,3
Error in line 14: DackTi A342 55,7
Error in line 29: AOdQ4Xj A331 15,1
Error in line 30: S28 A342 63,1
Error in line 31: AOdQ4Xj S28 67,7
Error in line 19: qWeTgvpm0iN A342 68,9
Error in line 34: 2XxetM A331 58,9
Error in line 32: xvh S28 43,1
Error in line 35: S28 S618 50,2
Error in line 43: AOdQ4Xj A342 58,6
Error in line 42: xvh S618 16,2
Error in line 46: xvh A342 6,6
Error in line 45: AOdQ4Xj S28 13,8
Error in line 39: qWeTgvpm0iN S28 53,9
Error in line 59: AOdQ4Xj S618 48,2
Error in line 66: 2XxetM S618 79,35
Error in line 69: AOdQ4Xj S28 204,7
Error in line 72: S28 S618 93,6
Error in line 74: S28 S28 46,4
Error in line 70: 2XxetM S618 58,8
Error in line 79: 2XxetM A331 80,3
Error in line 81: AOdQ4Xj A342 74,0
Error in line 80: 2XxetM S28 70,7
Error in line 92: AOdQ4Xj S618 47,0
Error in line 93: 2XxetM S618 9,6
Error in line 121: AOdQ4Xj S618 79,0
Error in line 123: qWeTgvpm0iN A331 98,4
Error in line 120: MbxR A331 6,4
Error in line 126: MbxR A342 69,8
Error in line 133: MbxR S28 -1,2
Error in line 131: MbxR S28 19,0
Error in line 125: DackTi A331 421,3
Error in line 134: MbxR A331 3,3
Error in line 136: AOdQ4Xj S28 71,1
Error in line 147: SV8 A331 85,V
Error in line 149: S28 A331 232,6
Error in line 159: MbxR 342 50,8
Error in line 167: DackTi A342 164,7
Error in line 165: xvh S618 181,4
Error in line 143: MbxR S618 9,1
Error in line 180: qWeTgvpm0iN A342 38,5
Error in line 182: S28 A342 66,5
Error in line 184: xvh S28 76,2
Error in line 187: 2XxetM A342 125,3
Error in line 189: 2XxetM S618 93,9
Error in line 196: S2v S61v 65,2
Error in line 185: S28 S618 48,3
Error in line 205: AOdQ4Xj S28 5,1
Error in line 213: XxetM S8 110,6
Error in line 216: xvh S28 72,4
Error in line 219: S28 S618 41,3
Error in line 207: 2XxetM S28 33,0
Error in line 232: DackTi A331 34,2
Error in line 226: S28 A331 95,3
Error in line 233: DackTi S618 62,4
Error in line 230: xvh A342 31,5
